--- a/css/main.css
+++ b/css/main.css
@@ -1,12 +1,15 @@
 body {
     padding: 0;
     margin: 0;
+    background-color: rgb(226, 226, 226);
 }
+
 nav {
     display: inline-flex;
     justify-content: space-between;
     width: 100%;
 }
+
 ul {
     text-align: right;
     list-style: none;
@@ -15,12 +18,36 @@ ul {
 li {
     display: inline-flex;
 }
+
 ul li a {
     text-decoration: none;
-    padding: 0 10px;
+    padding: 0 30px;
+    color: black;
 }
-.saitis-logo{
+
+.saitis-logo {
     width: 50px;
     height: 50px;
-    padding: 5px 20px;
+    padding: 20px 30px;
+}
+
+.misasalmebeli {
+    display: inline-flex;
+    padding: 30px 30px;
+    background-color: rgb(210, 210, 210);
+}
+
+.satauri {
+    text-align: center;
+    font-size: 30px;
+    font-weight: 600;
+}
+
+.mtavari-teqsti {
+    display: inline-block;
+    padding-left: 30px;
+}
+
+.italic {
+    font-style: italic;
 }
